@@ -20,6 +20,7 @@ Change log 1.3 (under development)
 * Implemented support for setting internal state from a context (using Whitebox.setInternalStateFromContext(..)).
 * Error message differ between static or instance type fields when internal state cannot be set because a field wasn't found.
 * PowerMock now supports mocking instance methods of final system classes (such as java.lang.String). To do this you need to prepare the class that invokes the method of the system class as well as the actual test case. Note that partial mocking of instance methods in final system classes doesn't work yet.
+* You can now mock new instance calls to final system classes in the same was you'd mock any other class. However if you want to setup expectations for the final system class mock returned by expectNew you must also prepare the actual test case using @PrepareForTest.
 
 
 Change log 1.2.5 (released 2009-05-05)
